<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity_Myprofile" android:orientation="vertical"
        android:background="@android:color/background_light">
    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar_this">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personalprofile"
                android:textSize="20sp" android:textColor="@android:color/background_light"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp" app:srcCompat="@mipmap/ic_launcher_round"
                        android:id="@+id/iv_background" android:scaleType="fitXY"/>
                <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp" app:srcCompat="@mipmap/ic_launcher_round"
                        android:id="@+id/iv_head" android:layout_gravity="center"/>
            </FrameLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" android:layout_marginTop="5dp" android:layout_marginBottom="5dp"
                    android:id="@+id/fl_name">

                <TextView
                        android:text="@string/username"
                        android:layout_width="match_parent"
                        android:layout_height="70dp" android:id="@+id/tv_nameTitle"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:text="@string/unsetting"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" android:id="@+id/tv_nameValue"
                        android:layout_gravity="bottom|left" android:gravity="top|left"
                        android:textColor="@android:color/darker_gray" android:textSize="12sp"/>
            </FrameLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" android:layout_marginTop="5dp" android:layout_marginBottom="5dp">

                <TextView
                        android:text="@string/userstate"
                        android:layout_width="match_parent"
                        android:layout_height="70dp" android:id="@+id/tv_stateTitle"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:text="@string/unsetting"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" android:id="@+id/tv_stateValue"
                        android:layout_gravity="bottom|left" android:gravity="top|left"
                        android:textColor="@android:color/darker_gray" android:textSize="12sp"/>
            </FrameLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp">

                <TextView
                        android:text="@string/phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="70dp" android:id="@+id/tv_phoneTitle"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:text="@string/unsetting"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" android:id="@+id/tv_phoneValue"
                        android:layout_gravity="bottom|left" android:gravity="top|left"
                        android:textColor="@android:color/darker_gray" android:textSize="12sp"/>
            </FrameLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp">

                <TextView
                        android:text="@string/autopostnewpic"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp" android:id="@+id/tv_autoPostChangedPicTitle"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:text="@string/autopostnewpictoposts"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp" android:id="@+id/tv_autoPostChangedPicSubtitle"
                        android:layout_gravity="bottom|left" android:gravity="top|left"
                        android:textColor="@android:color/darker_gray" android:textSize="12sp"/>
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/cb_personalPic"
                        android:gravity="center|right" android:layout_gravity="center|right"
                        android:layout_marginRight="5dp" android:textColor="@android:color/black"
                        android:visibility="visible" android:checked="true"
                android:buttonTint="@color/colorPrimaryDark"/>
            </FrameLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp">

                <TextView
                        android:text="@string/userid"
                        android:layout_width="match_parent"
                        android:layout_height="70dp" android:id="@+id/tv_idTitle"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:text="@string/unsetting"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" android:id="@+id/tv_idValue"
                        android:layout_gravity="bottom|left" android:gravity="top|left" android:textSize="12sp"
                        android:textColor="@android:color/darker_gray"/>
            </FrameLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp">

                <TextView
                        android:text="@string/allowaddfriendbyid"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" android:id="@+id/tv_allowAddFriendByIDTitle"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:text="@string/otherusercanaddfriendtoyoubyidsearch"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" android:id="@+id/tv_allowAddFriendByIDSubtitle"
                        android:layout_gravity="bottom|left" android:gravity="top|left" android:textSize="12sp"
                        android:textColor="@android:color/darker_gray"/>
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/cb_allowAddFriendByID"
                        android:gravity="center|right" android:layout_gravity="center|right"
                        android:buttonTint="@color/colorPrimaryDark"/>
            </FrameLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp">


                <TextView
                        android:text="@string/qrcode"
                        android:layout_width="match_parent"
                        android:layout_height="70dp" android:id="@+id/tv_QRCodeTitle"
                        android:textColor="@android:color/black" android:gravity="left|center_vertical"
                />
            </FrameLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp">

                <TextView
                        android:text="@string/userbirthday"
                        android:layout_width="match_parent"
                        android:layout_height="70dp" android:id="@+id/tv_BirthdayTitle"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:text="@string/unsetting"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" android:id="@+id/tv_BirthdayValue"
                        android:layout_gravity="bottom|left" android:gravity="top|left" android:textSize="12sp"
                        android:textColor="@android:color/darker_gray"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>